--- a/Autring-navbar/index.html
+++ b/Autring-navbar/index.html
@@ -10,18 +10,31 @@
 </head>
 <body>
     <div class="navbar">
-        <ul>
-            <li><a href="#"><i class="fa-solid fa-house home-icon"></i></a></li>
-            <li><a href="#">INDIA</a></li>
-            <li><a href="#">INTERNATIONAL</a></li>
-            <li><a href="#">POLITICAL</a></li>
-            <li><a href="#">GOVERNANCE</a></li>
-            <li><a href="#">ECONOMY</a></li>
-            <li><a href="#">SPORTS</a></li>
-            <li><a href="#">SCIENCE&TECH</a></li>
-            <li><a href="#">VIDEOS</a></li>
-            <li><a href="#">GET INVOVED</a></li>
-            <!-- <li><a href="#"><img src="Path 41.svg" alt=""></a></li> -->
+        <ul class="nav-ul">
+            <li class="nav-item"><a href="#"><i class="fa-solid fa-house home-icon"></i></a></li>
+            <li class="nav-item"><a href="#">INDIA</a></li>
+            <li class="nav-item"><a href="#">INTERNATIONAL</a></li>
+            <li class="nav-item"><a href="#">POLITICAL</a></li>
+            <li class="nav-item"><a href="#">GOVERNANCE</a></li>
+            <li class="nav-item"><a href="#">ECONOMY</a></li>
+            <li class="nav-item"><a href="#">SPORTS</a></li>
+            <li class="nav-item"><a href="#">SCIENCE&TECH</a></li>
+            <li class="nav-item"><a href="#">VIDEOS</a></li>
+            <li class=" nav-item nav-dropdown">
+                <a href="#">GET INVOVED</a>
+                <ul class="dropdown-ul">
+                    <li class="dropdown-item">HealthCare</li>
+                    <li class="dropdown-item">Eduction</li>
+                    <li class="dropdown-item">Social Impact</li>
+                    <li class="dropdown-item">Empowerment</li>
+                    <li class="dropdown-item">Environment</li>
+                    <li class="dropdown-item">Fatafat News</li>
+                    <li class="dropdown-item">Autring's Blog</li>
+                    <li class="dropdown-item">Career</li>
+                    <li class="dropdown-item">Connect with us</li>
+                    <li class="dropdown-item">support to Journalism</li>
+                </ul>
+            </li>
             <img src="Path 41.svg" alt="">
         </ul>
 
